--- a/design/styles.css
+++ b/design/styles.css
@@ -128,7 +128,7 @@ body {
 }
 
 .container .play {
-      background: url(images/icon-play.svg);
+      background: url(../images/icon-play.svg);
       background-repeat: no-repeat;
       padding: 0;
       padding-top: 30px;
